--- a/src/styles/chatFeed.css
+++ b/src/styles/chatFeed.css
@@ -7,7 +7,7 @@
 
 }
 .message-form-container{
-    /* border:2px solid red; */
+    /* background:rgb(108, 45, 108); */
     display: flex;
     align-items:flex-end;
     height: 100vh;
