--- a/src/styles/loginForm.css
+++ b/src/styles/loginForm.css
@@ -1,14 +1,74 @@
 .loginForm-wrapper{
-    border:1px solid red;
     height: 100vh;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background:rgb(108, 45, 108);
 }
 .form-container{
-
+    background: rgba(0, 0, 0, 0.8);
+    padding: 2em;
+    border-radius: 5px;
+    color:white;
 }
 .title{
-
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1.6;
+    font-size: clamp(1rem, 4vw + 1rem, 2rem);
 }
-.loginForm{}
-.form-group{}
-.input-field{}
+.loginForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:2rem;
+    width: 100%;
+    height: 100%;
+    margin-top: 1.5rem;
+}
+.form-group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border:1.5px solid white;
+    height: 3rem;
+}
+.input-field{
+    width: 100%;
+    height: 100%;
+    outline:none;
+    border:none;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    padding-inline:1em;
+    background: transparent;
+    color:white;
+}
+.btn-wrapper{
+    margin:0 auto;
+}
+.btn-wrapper button{
+    padding: 0.5em 1em;
+    font-size: 1.05rem;
+    letter-spacing: 0.8px;
+    font-weight: 500;
+    border:1.5px solid white;
+    border-radius:5px;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    -ms-border-radius:5px;
+    -o-border-radius:5px;
+    transition:all 0.35s ease;
+    -webkit-transition:all 0.35s ease;
+    -moz-transition:all 0.35s ease;
+    -ms-transition:all 0.35s ease;
+    -o-transition:all 0.35s ease;
+}
+.btn-wrapper button:hover{
+    cursor: pointer;
+    background: transparent;
+    color:white;
+}
