--- a/src/styles/messageForm.css
+++ b/src/styles/messageForm.css
@@ -22,6 +22,7 @@
     font-size: 1rem;
     font-weight: 500;
     letter-spacing: 0.5px;
+    background:transparent;
 }
 .picture-icon
 ,.send-button{
